platform-charts/admin-aaa/templates/network/admin-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a
spec:
  type: ClusterIP
  selector:
    app: a
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
