platform-charts/admin-aaa/templates/network/admin-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b
spec:
  type: ClusterIP
  selector:
    app: b
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
