platform-charts/admin-aaa/templates/network/admin-qq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qq
spec:
  type: ClusterIP
  selector:
    app: qq
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
