platform-charts/admin-aaa/templates/network/admin-ta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ta
spec:
  type: ClusterIP
  selector:
    app: ta
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
