platform-charts/admin-aaa/templates/network/admin-w-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: w
spec:
  type: ClusterIP
  selector:
    app: w
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
