platform-charts/admin-aaa/templates/network/admin-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
