platform-charts/admin-aaa/templates/network/admin-www-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
